--- a/index.html
+++ b/index.html
@@ -7,17 +7,51 @@
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<body>
-		<header class="bg-green">Header</header>
+		<header class="bg-green">
+			<ul>
+				<li><a href="https://github.com">GitHub</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</header>
 		<main>
 			<section>
 				<h1>My New Website</h1>
-				<figure>Image with a caption</figure>
+				<figure>
+					<img
+						src="./assets/images/image-1.png"
+						alt="brown green and pink squares centered over a 'comming soon' message"
+					/>
+					<figcaption>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					</figcaption>
+				</figure>
 			</section>
 			<section id="contact">
 				<h3>Contact Me</h3>
-				<form>Contact Form</form>
+				<form>
+					<div>
+						<label for="name">Name:</label>
+						<input
+							type="text"
+							id="name"
+							name="name"
+							placeholder="Enter your name"
+						/>
+					</div>
+					<div>
+						<label for="email">Email:</label>
+						<input
+							type="email"
+							id="email"
+							name="email"
+							placeholder="Enter your email"
+						/>
+					</div>
+					<button type="submit">SEND</button>
+				</form>
 			</section>
 		</main>
-		<footer class="bg-green">Footer</footer>
+		<footer class="bg-green">&copy; 2023 My New Website Productions</footer>
 	</body>
 </html>
